objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>BaaS Approval</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>In Review with TBOM</fullName>
        </values>
        <values>
            <fullName>With Relationship</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CS Incident Tracking</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Review with TBOM</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CS Legal Tracking</fullName>
        <description>Process for Contract Services Legal Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Proceeding Scheduled</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CS Relationship Approval</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Feedback in Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>New Approval Preparation</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>With Relationship</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contract Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Review with TBOM</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Unknown Relationship</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Core Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credit Card Services</fullName>
        <description>Credit Card Dex Call Center and Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Review with TBOM</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LPL</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Treasury</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Plan_Required__c</fullName>
        <inlineHelpText>Does the incident require completion of Root Cause Analysis and Action Plan?</inlineHelpText>
        <label>Action Plan Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Settlement_or_Damages__c</fullName>
        <inlineHelpText>Enter settlement or damages, if applicable</inlineHelpText>
        <label>Actual Settlement or Damages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Project_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Project Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_SLA_in_Working_Days__c</fullName>
        <inlineHelpText>If applicable: Enter the number of additional working days allowed under TBOM&apos;s SLA procedures once feedback and/or updated collateral material is received from the relationship.</inlineHelpText>
        <label>Additional SLA in Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Complaint_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date customer submitted complaint, if info available</inlineHelpText>
        <label>Agency Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Follow_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please provide reason for agency follow up</inlineHelpText>
        <label>Agency Follow Up</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Receiving_Initial_Complaint__c</fullName>
        <inlineHelpText>Enter Agency receiving complaint directly from consumer. If more than one complaint received from customer, the complaint will be logged one time under the agency with the most direct oversight of our institution.</inlineHelpText>
        <label>Agency Receiving Initial Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney General</fullName>
                </value>
                <value>
                    <fullName>CFPB</fullName>
                </value>
                <value>
                    <fullName>Division of Finance</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
                <value>
                    <fullName>Federal Reserve</fullName>
                </value>
                <value>
                    <fullName>OCC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Reference_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter agency reference or complaint number, if applicable</inlineHelpText>
        <label>Agency Reference Number</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipate_Delinquency_Increases__c</fullName>
        <inlineHelpText>Do you anticipate an increase in the number of delinquencies associated with this event? If no, skip 3.03</inlineHelpText>
        <label>3.02 Anticipate Delinquency Increases</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anticipated_Operations_Capacity__c</fullName>
        <inlineHelpText>What capacity are operations &amp; back office teams anticipated to be operating at during the incident?</inlineHelpText>
        <label>5.03 Anticipated Operations Capacity %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approval_Tier__c</fullName>
        <inlineHelpText>Enter the appropriate collateral approval tier according to TBOM&apos;s procedures.</inlineHelpText>
        <label>Approval Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By_Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date relationship&apos;s documentation indicates collateral material was fully approved by applicable parties at their organization.</inlineHelpText>
        <label>Approved By Relationship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Avoidable_Complaint__c</fullName>
        <inlineHelpText>Was the customer’s complaint avoidable, wherein the customer attempted to resolve their concerns with the relationship and the relationship failed to deliver a resolution which resulted in escalation to an outside party – i.e. agency or escalation to TBOM.</inlineHelpText>
        <label>Avoidable Complaint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCP_DR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCP/DR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BaaS_Compliance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BaaS Compliance Approver</description>
        <inlineHelpText>BaaS Compliance Approver</inlineHelpText>
        <label>BaaS Compliance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesSKhr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BaaS_Retail_Banking_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail Banking Approver</description>
        <inlineHelpText>BaaS retail banking approver</inlineHelpText>
        <label>BaaS Retail Banking Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesSKiu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Back_Office_Agent_Case_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Back Office Agent Case Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Back_Office_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Back Office employee working case</inlineHelpText>
        <label>Back Office Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Named__c</fullName>
        <label>Bank Named</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_Number__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1_Operations_Center</fullName>
                    <label>1 - Operations Center</label>
                </value>
                <value>
                    <fullName>2_Perryville</fullName>
                    <label>2 - Perryville</label>
                </value>
                <value>
                    <fullName>3_Cape_Girardeau_N_Kingshighway</fullName>
                    <label>3 - Cape Girardeau (N Kingshighway)</label>
                </value>
                <value>
                    <fullName>4_Ozark</fullName>
                    <label>4 - Ozark</label>
                </value>
                <value>
                    <fullName>6_Jackson_Jackson_Blvd</fullName>
                    <label>6 - Jackson (Jackson Blvd)</label>
                </value>
                <value>
                    <fullName>7_Marble_Hill</fullName>
                    <label>7 - Marble Hill</label>
                </value>
                <value>
                    <fullName>8_Cape_Girardeau_William_St</fullName>
                    <label>8 - Cape Girardeau (William St)</label>
                </value>
                <value>
                    <fullName>9_Cape_Girardeau_S_Kingshighway</fullName>
                    <label>9 - Cape Girardeau (S Kingshighway)</label>
                </value>
                <value>
                    <fullName>10_Columbia</fullName>
                    <label>10 - Columbia</label>
                </value>
                <value>
                    <fullName>11_Jackson_Main_St</fullName>
                    <label>11 - Jackson (Main St)</label>
                </value>
                <value>
                    <fullName>12_Republic</fullName>
                    <label>12 - Republic</label>
                </value>
                <value>
                    <fullName>13_Springfield_S_Campbell_Ave</fullName>
                    <label>13 - Springfield (S Campbell Ave)</label>
                </value>
                <value>
                    <fullName>14_Springfield_S_Kansas_Expressway</fullName>
                    <label>14 - Springfield (S Kansas Expressway)</label>
                </value>
                <value>
                    <fullName>15_Springfield_E_Sunshine</fullName>
                    <label>15 - Springfield (E Sunshine)</label>
                </value>
                <value>
                    <fullName>16_Branson</fullName>
                    <label>16 - Branson</label>
                </value>
                <value>
                    <fullName>17_Scott_City</fullName>
                    <label>17 - Scott City</label>
                </value>
                <value>
                    <fullName>18_Patton</fullName>
                    <label>18 - Patton</label>
                </value>
                <value>
                    <fullName>19_Cape_Girardeau_Broadway</fullName>
                    <label>19 - Cape Girardeau (Broadway)</label>
                </value>
                <value>
                    <fullName>20_Poplar_Bluff</fullName>
                    <label>20 - Poplar Bluff</label>
                </value>
                <value>
                    <fullName>21_Closed</fullName>
                    <label>21 - Closed</label>
                </value>
                <value>
                    <fullName>22_Steele</fullName>
                    <label>22 - Steele</label>
                </value>
                <value>
                    <fullName>23_Caruthersville</fullName>
                    <label>23 - Caruthersville</label>
                </value>
                <value>
                    <fullName>24_Perryville_(Downtown)</fullName>
                    <label>24 - Perryville (Downtown)</label>
                </value>
                <value>
                    <fullName>25_Dixon</fullName>
                    <label>25 - Dixon</label>
                </value>
                <value>
                    <fullName>26_St_Robert</fullName>
                    <label>26 - St Robert</label>
                </value>
                <value>
                    <fullName>27_Rolla</fullName>
                    <label>27 - Rolla</label>
                </value>
                <value>
                    <fullName>28_Martinsburg</fullName>
                    <label>28 - Martinsburg</label>
                </value>
                <value>
                    <fullName>29_Mexico</fullName>
                    <label>29 - Mexico</label>
                </value>
                <value>
                    <fullName>30_Wellsville</fullName>
                    <label>30 - Wellsville</label>
                </value>
                <value>
                    <fullName>31_Montgomery_City</fullName>
                    <label>31 - Montgomery City</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_AIR_Information_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AIR Information Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_AIR_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AIR Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_AIR_Response__c</fullName>
        <description>AIR Response from Relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>AIR Response from Relationship</inlineHelpText>
        <label>AIR Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_AIR_Submitted_to_FDIC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AIR Submitted to FDIC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <description>This field is used to capture the Branch on the Account that is related to the case.</description>
        <formula>Account.LLC_BI__Branch__r.Name</formula>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Case_Owner_Check__c</fullName>
        <description>This field Is used to check whether the current logged in user is same as the Case owner or not</description>
        <formula>IF(Owner:User.Id = $User.Id,1,0)</formula>
        <label>Case Owner Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Charge_Off_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Complaint_Topic__c</fullName>
        <label>Complaint Topic (Pre or Post Charge Off)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Charge Off</fullName>
                </value>
                <value>
                    <fullName>Post-Charge Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Current_Assignee_Check__c</fullName>
        <formula>IF(CF_Current_Assignee__r.Id = $User.Id,1,0)</formula>
        <label>Current Assignee Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Current_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be manually populated by the user.</description>
        <label>Current Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseslwPH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Date_Extension_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date_Extension_Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_Extension_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Extension Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Date_of_Birth__c</fullName>
        <formula>Contact.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Description__c</fullName>
        <description>Used in the list view</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Error_1_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 1 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_1_Found__c</fullName>
        <label>Error 1 Found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>ProfitStars</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Error_2_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 2 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_2_Found__c</fullName>
        <label>Error 2 Found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>ProfitStars</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Error_3_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error 3 Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Error_3_Found__c</fullName>
        <label>Error 3 Found</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Silverlake Setup</fullName>
                </value>
                <value>
                    <fullName>ProfitStars</fullName>
                </value>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>DDA Maintenance</fullName>
                </value>
                <value>
                    <fullName>iPay</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Extension_Requested__c</fullName>
        <label>Extension Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Final_Date_Info_Received__c</fullName>
        <description>Final Date Info Received from Relationship</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Final Date Info Received from Relationship</inlineHelpText>
        <label>Final Date Info Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Form_Letter__c</fullName>
        <label>Form Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Maintenance_Servicing__c</fullName>
        <label>Maintenance/Servicing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Post_Charge_Off__c</fullName>
        <label>Post Charge Off</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_QC_Review_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QC Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_QC_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QC Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Caseslwyg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Region__c</fullName>
        <description>This field is used to capture the region on the Account that is related to the case.</description>
        <formula>TEXT(  Account.LLC_BI__Region__c  )</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Related_Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Related_Temporary_Limit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Temporary Limit</label>
        <referenceTo>CO_Temporary_Limit_Changes__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Manager__c</fullName>
        <description>This field is used to capture the RM on the Account that is related to the case.</description>
        <formula>Account.CF_Relationship_Manager__r.FirstName + &apos; &apos; + Account.CF_Relationship_Manager__r.LastName</formula>
        <label>Relationship Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Secondary_Complaint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Tax_Identification_Number__c</fullName>
        <formula>Account.LLC_BI__Tax_Identification_Number_PE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Sales_Officer__c</fullName>
        <description>This field is used to capture the TSO on the Account that is related to the case.</description>
        <formula>Account.TM_Treasury_Officer__r.FirstName + &apos; &apos; + Account.TM_Treasury_Officer__r.LastName</formula>
        <label>Treasury Sales Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Support_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be manually populated by the user.</description>
        <label>Treasury Support Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CaseslwOx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <formula>Account.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Updates to this field must be done on the Account record</inlineHelpText>
        <label>CIF#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_First_6_of_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the first 6 digits of the customer&apos;s credit card account number.</inlineHelpText>
        <label>CS First 6 of Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Incident_Type__c</fullName>
        <label>CS Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint Identified Incident</fullName>
                </value>
                <value>
                    <fullName>Relationship Identified Incident</fullName>
                </value>
                <value>
                    <fullName>Other Incident (please describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>